--- a/package.json
+++ b/package.json
@@ -14,33 +14,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.0.0",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
-    "@types/express": "^4.0.36",
-    "@types/lodash": "^4.14.70",
+    "@angular/animations": "^11.2.5",
+    "@angular/common": "^11.2.5",
+    "@angular/compiler": "^11.2.5",
+    "@angular/core": "^11.2.5",
+    "@angular/forms": "^11.2.5",
+    "@angular/platform-browser": "^11.2.5",
+    "@angular/platform-browser-dynamic": "^11.2.5",
+    "@angular/router": "^11.2.5",
     "body-parser": "^1.17.2",
     "command-line-args": "^4.0.6",
     "core-js": "^2.4.1",
+    "express": "^4.17.1",
+    "jasmine": "^3.6.4",
     "nodemon": "^1.11.0",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
+    "rxjs": "^6.5.4",
+    "tslib": "^2.1.0",
+    "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular/cli": "1.2.1",
-    "@angular/compiler-cli": "^4.0.0",
-    "@angular/language-service": "^4.0.0",
-    "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "~3.0.1",
-    "jasmine-core": "~2.6.2",
+    "@angular-devkit/build-angular": "^0.1102.4",
+    "@angular/cli": "^11.2.4",
+    "@angular/compiler-cli": "^11.2.5",
+    "@angular/language-service": "^11.2.5",
+    "@types/express": "^4.17.11",
+    "@types/jasmine": "^3.6.6",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/lodash": "^4.14.168",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "^3.6.0",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.1.1",
@@ -48,9 +51,9 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^5.4.4",
-    "ts-node": "~3.0.4",
-    "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "protractor": "^7.0.0",
+    "ts-node": "^3.2.0",
+    "tslint": "^6.1.3",
+    "typescript": "^4.0.5"
   }
 }
