--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^11.2.5",
     "@angular/platform-browser-dynamic": "^11.2.5",
     "@angular/router": "^11.2.5",
+    "argon2": "^0.27.1",
     "body-parser": "^1.17.2",
     "command-line-args": "^4.0.6",
     "core-js": "^2.4.1",
