feat: Browser Cookies - How To Use Them For User Session Management

--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "argon2": "^0.27.1",
     "body-parser": "^1.17.2",
     "command-line-args": "^4.0.6",
+    "cookie-parser": "^1.4.5",
     "core-js": "^2.4.1",
     "express": "^4.17.1",
     "jasmine": "^3.6.4",
+    "moment": "^2.29.1",
     "nodemon": "^1.11.0",
     "password-validator": "^5.1.1",
     "rxjs": "^6.5.4",
