--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "angular-security-course",
   "version": "0.0.0",
   "license": "MIT",
+  "notes": {
+    "extra-cli-options": "--ssl --ssl-key key.pem --ssl-cert cert.pem"
+  },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config ./proxy.json ",
+    "start": "ng serve --proxy-config ./proxy.json --ssl --ssl-key key.pem --ssl-cert cert.pem",
     "start-server": "ts-node -P ./server/server.tsconfig.json ./server/server.ts --secure",
     "server": "nodemon  -w ./server --ext \".ts\" --exec \"npm run start-server\"",
     "build": "ng build",
