--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/platform-browser": "^11.2.5",
     "@angular/platform-browser-dynamic": "^11.2.5",
     "@angular/router": "^11.2.5",
+    "@auth0/auth0-angular": "^1.3.2",
     "argon2": "^0.27.1",
     "body-parser": "^1.17.2",
     "command-line-args": "^4.0.6",
