--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es2015",
+    "resolveJsonModule": true,
     "typeRoots": [
       "node_modules/@types"
     ],
