--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "cookie-parser": "^1.4.5",
     "core-js": "^2.4.1",
     "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
     "http-server": "^0.12.3",
     "jasmine": "^3.6.4",
     "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^2.0.1",
     "moment": "^2.29.1",
     "nodemon": "^1.11.0",
     "password-validator": "^5.1.1",
