(Auth0) feat: User Signup and User Profile

--- a/auth-config.json
+++ b/auth-config.json
@@ -1,5 +1,6 @@
 {
   "domain": "dev-jl5qaipz.eu.auth0.com",
   "clientId": "6Q7EQZIOS0OEoofU4YipcZQeMcdqmc6W",
-  "audience": "https://dev-jl5qaipz.eu.auth0.com/api/v2/"
+  "audience": "https://dev-jl5qaipz.eu.auth0.com/api/v2/",
+  "scope": "openid email"
 }
